[Silicon] implementing Dominik's first read.

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -38,6 +38,7 @@
 \usepackage{amsmath,mathtools}
 \RequirePackage[capitalise,noabbrev]{cleveref} % For the cref (clever reference)
 \usepackage{braket}
+\usepackage{xcolor}
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
