--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -256,3 +256,15 @@ keywords = "Global least-squares fit "
       SLACcitation   = "%%CITATION = SPHJA,5,749;%%"
 }
 
+
+@article{Ramo:1939vr,
+      author         = "Ramo, Simon",
+      title          = "{Currents induced by electron motion}",
+      journal        = "Proc. Ire.",
+      volume         = "27",
+      year           = "1939",
+      pages          = "584-585",
+      doi            = "10.1109/JRPROC.1939.228757",
+      reportNumber   = "RX-1548",
+      SLACcitation   = "%%CITATION = PIREA,27,584;%%"
+}
