[Calibration] explained TOT, TOA with schematics

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -39,6 +39,7 @@
 \RequirePackage[capitalise,noabbrev]{cleveref} % For the cref (clever reference)
 \usepackage{braket}
 \usepackage{xcolor}
+\usepackage{tikz-timing}[2009/12/09] % for the clock
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
@@ -110,6 +111,7 @@
 \includeonly{%
   planning,
   Silicon,
+  Calibration,
   appendix_TODO,
   refs,
 }
