--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -217,15 +217,20 @@ keywords = "Global least-squares fit "
 }
 
 @article{art:tmpx,
-  title =	 "Timepix, a 65k programmable pixel readout chip for
-                  arrival time, energy and/or photon counting
-                  measurements ",
-  journal =	 "NIM",
-  volume =	 "A 581",
-  pages =	 "485 - 494",
-  year =	 2007,
-  author =	 "X. Llopart and R. Ballabriga and M. Campbell and
-                  L. Tlustos and W. Wong",
+      author         = "Llopart, X. and Ballabriga, R. and Campbell, M. and
+                        Tlustos, L. and Wong, W.",
+      title          = "{Timepix, a 65k programmable pixel readout chip for
+                        arrival time, energy and/or photon counting measurements}",
+      booktitle      = "{Instrumentation. Proceedings, 11th International
+                        Conference, VCI 11, Vienna, Austria, February 19-24,
+                        2007}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A581",
+      year           = "2007",
+      pages          = "485-494",
+      doi            = "10.1016/j.nima.2007.08.079",
+      %note           = "[Erratum: Nucl. Instrum. Meth.A585,106(2008)]",
+      SLACcitation   = "%%CITATION = NUIMA,A581,485;%%"
 }
 
 @online{synopsysTCAD,
