--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -85,7 +85,7 @@ developed more in the coming sections.
 \end{figure}
 
 %% --------------------------------------------- %%
-\section{Charge generation in silicon}
+\section{Charge generation in silicon}\label{sec:chargeInSi}
 
 \subsection{Bethe-Bloch formula}
 In silicon, free charge careers are generated due to thermal effects
